--- a/index.html
+++ b/index.html
@@ -9,9 +9,18 @@
 </head>
 
 <body>
+	<section class="container">
 
-	<div id="form"></div>
+		<div class="wrapper">
+			<header>
+				<h1>LevelUp Entry Project</h1>
+			</header>
+			<form method="" id="level-up-form" class="clearfix">
 
+			</form>
+		</div>
+
+	</section>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="scripts/main.js"></script>
 </body>
