updating script to solve the checkbox issue

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<header>
 				<h1>LevelUp Entry Project</h1>
 			</header>
-			<form method="" id="level-up-form" class="clearfix">
+			<form method="" id="level-up-form">
 
 			</form>
 		</div>
